2007-06-22  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (disp_size): New.
	(imm_size): Likewise.
	(output_disp): Use disp_size and imm_size.
	(output_imm): Use imm_size.

2007-06-19  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.h (struct xtensa_frag_type): Update comment about
	use of literal_frag field.
	* config/tc-xtensa.c (xtensa_mark_literal_pool_location): Record frag
	in the literal_frag field.
	(xtensa_move_literals): Use it here instead of searching.  Update
	literal_frag field with new value.

2007-06-14  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (do_t_mov_cmp): Handle shift by register and
	narrow shift by immediate.

2007-06-14  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ACLOCAL_AMFLAGS): Add -I ../config -I ../bfd.

	* acinclude.m4: Don't include m4 files.
	(BFD_BINARY_FOPEN): Removed.
	Remove libtool kludge.

	* Makefile.in: Regenerated.
	* doc/Makefile.in: Likewise.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2007-06-11  Sterling Augustine  <sterling@tensilica.com>
	    Bob Wilson  <bob.wilson@acm.org>
	
	* config/tc-xtensa.c (XTENSA_PROP_INSN_NO_TRANSFORM): Renamed to...
	(XTENSA_PROP_NO_TRANSFORM): ...this.
	(frag_flags_struct): Move is_no_transform out of the insn sub-struct.
	(xtensa_mark_frags_for_org): New.
	(xtensa_handle_align): Set RELAX_ORG frag subtype for rs_org.
	(xtensa_post_relax_hook): Call xtensa_mark_frags_for_org.
	(get_frag_property_flags): Adjust reference to is_no_transform flag.
	(xtensa_frag_flags_combinable): Likewise.
	(frag_flags_to_number): Likewise.  Use XTENSA_PROP_NO_TRANSFORM.
	* config/tc-xtensa.h (xtensa_relax_statesE): Add RELAX_ORG.
	
2007-06-06  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (s_align): Pad code sections appropriately.

2007-06-05  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (insns): Correct Thumb-2 ldrd/strd opcodes.

2007-06-05  Nick Clifton  <nickc@redhat.com>

	PR gas/4587